--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/stack": "^6.2.3",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.3.3",
-    "react-native-screens": "^3.17.0"
+    "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
