--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^6.5.0",
+    "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/stack": "^6.2.3",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-gesture-handler": "^2.6.1",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-modalize": "^2.1.1",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-wheel-pick": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
