--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/datetimepicker": "^6.5.0",
     "@react-native-picker/picker": "^2.4.6",
     "@react-navigation/bottom-tabs": "^6.3.3",
@@ -24,8 +25,8 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-screens": "^3.17.0",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-wheel-pick": "^1.2.0"
+    "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
